# cmake-dll-generator

./: .gitignore  CMakeLists.txt  README.md  app.cpp  test-run.ps1
dll/: CMakeLists.txt
