CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
SET(INSTALL_PATH "${CMAKE_BINARY_DIR}/installed")
PROJECT(InstallingSharedLibs)

ADD_LIBRARY(ExternalDLL SHARED IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(ExternalDLL PROPERTIES
	IMPORTED_IMPLIB "${CMAKE_CURRENT_LIST_DIR}/dll/lib/dll$<IF:$<CONFIG:Debug>,D,R>.lib"
	IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/dll/lib/dll$<IF:$<CONFIG:Debug>,D,R>.lib"
)

ADD_EXECUTABLE(App app.cpp)
TARGET_LINK_LIBRARIES(App ExternalDLL)

