CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
SET(INSTALL_PATH "${CMAKE_BINARY_DIR}/installed")
PROJECT(InstallingSharedLibs)

ADD_LIBRARY(ExternalDLL SHARED IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(ExternalDLL PROPERTIES
	IMPORTED_IMPLIB   "${CMAKE_CURRENT_LIST_DIR}/dll/lib/dllR.lib"
	IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/dll/lib/dllR.dll"

	IMPORTED_IMPLIB_DEBUG "${CMAKE_CURRENT_LIST_DIR}/dll/lib/dllD.lib"
	IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_LIST_DIR}/dll/lib/dllD.dll"
)
INSTALL(IMPORTED_RUNTIME_ARTIFACTS ExternalDLL DESTINATION "${CMAKE_CURRENT_LIST_DIR}/App")

ADD_EXECUTABLE(App app.cpp)
TARGET_LINK_LIBRARIES(App ExternalDLL)
INSTALL(TARGETS App DESTINATION "${CMAKE_CURRENT_LIST_DIR}/App")
